syntax = "proto3";

option go_package = "api/protobuf/commodity";

package api.protobuf.commodity;

// 购物车加入商品的服务，发送请求：用户id 商品信息 返回：成功或者失败
service CommodityService {
	rpc CommodityAdd(AddRequest) returns(AddResponse);
	rpc CommodityShow(ShowRequest) returns(ShowResponse);
}
// 
message AddRequest {
	uint32 CommodityId = 1;
    string CommodityName = 2;
    float CommodityPrice = 3;
	string CommodityDiscription = 4;
}

message AddResponse {
    uint32 IdResponse = 1;
}

message ShowRequest {
	uint32 CommodityId = 1;
}
message ShowResponse {
	string NameResponse = 1;
    float PriceResponse = 2;
	string CommodityDiscription = 3;
}